[package]
name = "peas"
version = "0.1.0"
authors = ["Elliot Hillary <elliot@peers.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
crow = "0.7.1"
specs-derive="0.4.1"
cgmath = "0.18.0"
rand = "0.8.4"
serde = "1.0.126"
ron = "0.6.4"
lazy_static = "1.4.0"